# CustomerSentimentAnalysis

./: .env.example  .gitignore  COMPARISON_GUIDE.md  COMPARISON_QUICKSTART.md  COMPARISON_SETUP_COMPLETE.md  CONFIG_GUIDE.md  Dockerfile  FILE_INDEX.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_STRUCTURE.md  README.md  START_HERE.md  TRAINING_QUICKSTART.md  compare.ps1  compare_models.py  dvc.yaml  pyproject.toml  requirements.txt  run_training.py  start_mlflow_and_compare.py  train.ps1  train.sh  verify_setup.py
.github/workflows/: ci-cd.yml
config/: config.yaml  data.yaml  model.yaml
data/: raw.dvc
data/processed/: features_metadata.json
data/raw/: restaurant.csv
notebooks/: 01_eda.ipynb  Stratify_colab_cpu.ipynb
src/: __init__.py
src/api/: main.py
src/data/: prepare.py
src/features/: build_features.py
src/models/: README.md  TRAINING_GUIDE.md  predict.py  train.py  train_model.py
tests/: conftest.py  test_api.py  test_data.py
