[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-sentiment-analysis"
version = "0.1.0"
description = "MLOps project for customer sentiment analysis using transformers"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Data Science Team", email = "team@example.com"}
]
keywords = ["nlp", "sentiment-analysis", "mlops", "transformers"]

dependencies = [
    # Data Processing
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    # NLP & Deep Learning
    "transformers>=4.20.0",
    "torch>=1.10.0",
    "nltk>=3.6.0",
    # MLOps & Experiment Tracking
    "mlflow>=1.28.0",
    "dvc>=2.30.0",
    # API & Deployment
    "fastapi>=0.95.0",
    "uvicorn>=0.21.0",
    "pydantic>=1.9.0",
    # Utilities
    "python-dotenv>=0.19.0",
    "pyyaml>=6.0",
    "joblib>=1.1.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
    "pylint>=2.13.0",
    "jupyter>=1.0.0",
    "ipython>=7.0.0",
]
ml = [
    "wandb>=0.13.0",
    "tensorboard>=2.10.0",
    "optuna>=3.0.0",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]
known_third_party = ["torch", "transformers", "sklearn", "pandas", "numpy"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = [
    "C0330", "C0326",
    "R0903",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=src --cov-report=html --cov-report=term-missing --strict-markers"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "slow: slow running tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
